sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:6: error: not found: value elif
  elif(!plusPetit(i-1,i+1)){
  ^AlgGnomeSort:10: error: not found: value elif
    elif(plusPetit(i-1,i+1)){i+=1}
    ^